--- a/templates/blast.html
+++ b/templates/blast.html
@@ -36,7 +36,7 @@
                 <div style="text-align:left;">
                     <label for="subject" style="color:blue"> <b> I. Paste the sequence in the textarea. </b> </label>
                     <br>
-                    <span style="font-size:1em;">Try <a id="id_example" href="#" style="color:blue;" value="protein"> example </a> sequences.</span>
+                    <!--<span style="font-size:1em;">Try <a id="id_example" href="#" style="color:blue;" value="protein"> example </a> sequences.</span>-->
                 </div>
                 {{ form.hidden_tag() }}
                 <textarea placeholder="" style="min-height:100px" rows="10" name="id_sequences"
