--- a/templates/result_blast.html
+++ b/templates/result_blast.html
@@ -16,8 +16,15 @@
             <p></p>
         </div>
     </div>
-
-    <div class="container-wrap">
+<ul id="myTab" class="nav nav-tabs">
+    <li class="active">
+        <a href="#tab1" data-toggle="tab">Blast</a></li>
+        {% if hmmrecord != 0 %}
+        <li><a href="#tab2" data-toggle="tab">hmmscan</a></li>
+        {% endif %}
+        </ul>
+        <div id="myTabContent" class="tab-content">
+            <div class="tab-pane fade in active" id="tab1">
         <script defer type="text/javascript">
             $(document).ready(function () {
                 $('#data-table').DataTable({
@@ -33,7 +40,7 @@
                 });
             });
         </script>
-
+<br>
         <table class="table" id="data-table">
             <thead>
             <tr>
@@ -67,4 +74,20 @@
 
         </table>
     </div>
+        {% if hmmrecord != 0 %}
+        <div class="tab-pane fade" id="tab2">
+        <script src="{{ url_for('static', filename='scripts/prism.js') }}"></script>
+        <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet">
+        <style>
+        .displaya {
+  overflow: display;
+  word-wrap: normal;
+  white-space: pre;
+}
+</style>
+        <td><div class="container"><pre><code class="displaya">{{hmmrecord}}</code></pre></div></td>
+        </div>
+        {% endif %}
+    </div>
+    
 {% endblock %}
