Add herf to family in Blast

--- a/templates/blast.html
+++ b/templates/blast.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Blastx{% endblock %}
+{% block title %}Blast{% endblock %}
 
 {% block content %}
     <div class="form" id="form">
