--- a/templates/result_blast.html
+++ b/templates/result_blast.html
@@ -1,17 +1,17 @@
 {% extends 'base.html' %}
 
-{% block title %} Blast Data {% endblock %}
+{% block title %} Blast Result {% endblock %}
 {% block content %}
     <div class="row">
         <div class="page-header">
-            <h3>{{ head }}</h3>
+            <h3>Blast Result</h3>
 
         </div>
     </div>
     <div class="abstractOfPage">
         <div class="informationOfGene">
             <h1>
-                {{ head }}
+                Result
             </h1>
             <br>
         </div>
@@ -58,7 +58,11 @@
                     <tr>
                         <td>{{ record[0] }}</td>
                         <td>{{ record[1] }}</td>
-                        <td>{{ record[2] }}</td>
+                        {% if record[2].find("_")== -1 %}
+                        <td><a href="{{ url_for('family', family_id = record[2]) }} " target="_blank">{{ record[2] }}</a></td>
+                        {% else %}
+                        <td><a href="{{ url_for('subfamily', family_id = record[2]) }}" target="_blank">{{ record[2] }}</a></td>
+                        {% endif %}
                         <td>{{ record[3] }}</td>
                         <td>{{ record[4] }}</td>
                         <td>{{ record[5] }}</td>
