--- a/templates/result_blast.html
+++ b/templates/result_blast.html
@@ -35,7 +35,7 @@
                             {
                                 extend: 'csvHtml5',
                                 fieldBoundary: '',
-                                text: 'export'
+                                text: 'Export'
                             }]
                     });
                 });
