--- a/templates/blast.html
+++ b/templates/blast.html
@@ -3,6 +3,7 @@
 {% block title %}Blast{% endblock %}
 
 {% block content %}
+<script async defer src="https://hcaptcha.com/1/api.js?hl=en"></script>
 <div class="form" id="form">
     <div class="row">
         <div class="page-header">
