--- a/templates/blast.html
+++ b/templates/blast.html
@@ -44,6 +44,7 @@
                     <option value="no">--Please choose an option--</option>
                     <option value="a">All</option>
                     <option value="c">characterzied</option>
+                    <option value="u">uhgp</option>
                 </select>
                 <br>
                 <lable style="color:blue"><b>E-value</b></lable>
