--- a/templates/result_blast.html
+++ b/templates/result_blast.html
@@ -69,7 +69,7 @@
                         <td>{{ record[4] }}</td>
                         <td>{{ record[5] }}</td>
                         <td>
-                            <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record[7] }}">{{ record[6] }}</a>
+                            <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record[7] }}" target="_blank" rel="noopener noreferrer">{{ record[6] }}</a>
                         </td>
 
 
