--- a/templates/result_blast_uhgp.html
+++ b/templates/result_blast_uhgp.html
@@ -69,7 +69,7 @@
                         <td>
                             {% if "unclassified" in record[3]: %}
                                 <a href="{{ url_for('family', family_id = record[3].split('-', 1)[0]) }}">{{ record[3] }}</a>
-                            {% elif "_" in record.family: %}
+                            {% elif "_" in record[3]: %}
                                 <a href="{{ url_for('subfamily', family_id = record[3]) }}">{{ record[3] }}</a>
                             {% else %}
                                 <a href="{{ url_for('family', family_id = record[3]) }}">{{ record[3] }}</a>
