--- a/templates/result_blast.html
+++ b/templates/result_blast.html
@@ -2,108 +2,108 @@
 
 {% block title %}Blast Result{% endblock %}
 {% block content %}
-    <meta name="robots" content="noindex">
+<meta content="noindex" name="robots">
 
-    <div class="row">
-        <div class="page-header">
-            <h3>Blast Result</h3>
+<div class="row">
+    <div class="page-header">
+        <h3>Blast Result</h3>
 
-        </div>
     </div>
-    <div class="abstractOfPage">
-        <div class="informationOfGene">
-            <h1>
-                Result
-            </h1>
-            <br>
-        </div>
+</div>
+<div class="abstractOfPage">
+    <div class="informationOfGene">
+        <h1>
+            Result
+        </h1>
+        <br>
     </div>
-    <ul id="myTab" class="nav nav-tabs">
-        <li class="active">
-            <a href="#tab1" data-toggle="tab">Blast</a></li>
-        {% if hmmrecord != 0 %}
-            <li><a href="#tab2" data-toggle="tab">hmmscan</a></li>
-        {% endif %}
-    </ul>
-    <div id="myTabContent" class="tab-content">
-        <div class="tab-pane fade in active" id="tab1">
-            <script defer type="text/javascript">
-                $(document).ready(function () {
-                    $('#data-table').DataTable({
-                        lengthMenu: [[10, 25, 50, -1], ['10 rows', '25 rows', '50 rows', 'Show all']],
-                        dom: 'Bfrtip',
-                        buttons: [
-                            'pageLength',
-                            {
-                                extend: 'csvHtml5',
-                                fieldBoundary: '',
-                                text: 'Export'
-                            }]
-                    });
+</div>
+<ul class="nav nav-tabs" id="myTab">
+    <li class="active">
+        <a data-toggle="tab" href="#tab1">Blast</a></li>
+    {% if hmmrecord != 0 %}
+    <li><a data-toggle="tab" href="#tab2">hmmscan</a></li>
+    {% endif %}
+</ul>
+<div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade in active" id="tab1">
+        <script defer type="text/javascript">
+            $(document).ready(function () {
+                $('#data-table').DataTable({
+                    lengthMenu: [[10, 25, 50, -1], ['10 rows', '25 rows', '50 rows', 'Show all']],
+                    dom: 'Bfrtip',
+                    buttons: [
+                        'pageLength',
+                        {
+                            extend: 'csvHtml5',
+                            fieldBoundary: '',
+                            text: 'Export'
+                        }]
                 });
-            </script>
-            <br>
-            <table class="table" id="data-table">
-                <thead>
-                <tr>
-                    <th style="white-space: nowrap">Query ID</th>
-                    <th style="white-space: nowrap">Subject ID</th>
-                    <th style="white-space: nowrap">Family</th>
-                    <th style="white-space: nowrap">Identity</th>
-                    <th style="white-space: nowrap">E-value</th>
-                    <th style="white-space: nowrap">Protein Name</th>
-                    <th style="white-space: nowrap">Strain</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for record in records %}
-                    <tr>
-                        <td>{{ record[0] }}</td>
-                        <td>{{ record[1] }}</td>
-                        <td>
-                            {% if "unclassified" in record[2]: %}
-                                <a href="{{ url_for('family', family_id = record[2].split('-', 1)[0]) }}">{{ record[2] }}</a>
-                            {% elif "_" in record[2]: %}
-                                <a href="{{ url_for('subfamily', family_id = record[2]) }}">{{ record[2] }}</a>
-                            {% else %}
-                                <a href="{{ url_for('family', family_id = record[2]) }}">{{ record[2] }}</a>
-                            {% endif %}
-                        </td>
-                        <td>{{ '%0.2f'| format(record[3]|float) }}</td>
-                        <td>{{ '%0.2f'| format(record[4]|float) }}</td>
-                        <td>{{ record[5] }}</td>
-                        <td>
-                            <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record[7] }}"
-                               target="_blank" rel="noopener noreferrer">{{ record[6] }}</a>
-                        </td>
-
-
-                    </tr>
-                {% endfor %}
-
-                </tbody>
-
-            </table>
-        </div>
-        {% if hmmrecord != 0 %}
-            <div class="tab-pane fade" id="tab2">
-                <br>
-                <script src="{{ url_for('static', filename='scripts/prism.js') }}"></script>
-                <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet">
-                <style>
-                    .displaya {
-                        overflow: display;
-                        word-wrap: normal;
-                        white-space: pre;
-                    }
-                </style>
+            });
+        </script>
+        <br>
+        <table class="table" id="data-table">
+            <thead>
+            <tr>
+                <th style="white-space: nowrap">Query ID</th>
+                <th style="white-space: nowrap">Subject ID</th>
+                <th style="white-space: nowrap">Family</th>
+                <th style="white-space: nowrap">Identity</th>
+                <th style="white-space: nowrap">E-value</th>
+                <th style="white-space: nowrap">Protein Name</th>
+                <th style="white-space: nowrap">Strain</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for record in records %}
+            <tr>
+                <td>{{ record[0] }}</td>
+                <td>{{ record[1] }}</td>
                 <td>
-                    <div class="container">
-                        <pre><code class="displaya">{{ hmmrecord }}</code></pre>
-                    </div>
+                    {% if "unclassified" in record[2]: %}
+                    <a href="{{ url_for('family', family_id = record[2].split('-', 1)[0]) }}">{{ record[2] }}</a>
+                    {% elif "_" in record[2]: %}
+                    <a href="{{ url_for('subfamily', family_id = record[2]) }}">{{ record[2] }}</a>
+                    {% else %}
+                    <a href="{{ url_for('family', family_id = record[2]) }}">{{ record[2] }}</a>
+                    {% endif %}
                 </td>
-            </div>
-        {% endif %}
+                <td>{{ '%0.2f'| format(record[3]|float) }}</td>
+                <td>{{ '%0.2f'| format(record[4]|float) }}</td>
+                <td>{{ record[5] }}</td>
+                <td>
+                    <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record[7] }}"
+                       rel="noopener noreferrer" target="_blank">{{ record[6] }}</a>
+                </td>
+
+
+            </tr>
+            {% endfor %}
+
+            </tbody>
+
+        </table>
     </div>
+    {% if hmmrecord != 0 %}
+    <div class="tab-pane fade" id="tab2">
+        <br>
+        <script src="{{ url_for('static', filename='scripts/prism.js') }}"></script>
+        <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet">
+        <style>
+            .displaya {
+                overflow: display;
+                word-wrap: normal;
+                white-space: pre;
+            }
+        </style>
+        <td>
+            <div class="container">
+                <pre><code class="displaya">{{ hmmrecord }}</code></pre>
+            </div>
+        </td>
+    </div>
+    {% endif %}
+</div>
 
 {% endblock %}
